@@ -136,6 +136,18 @@ name|mockito
 operator|.
 name|Mockito
 operator|.
+name|times
+import|;
+end_import
+
+begin_import
+import|import static
+name|org
+operator|.
+name|mockito
+operator|.
+name|Mockito
+operator|.
 name|verify
 import|;
 end_import
@@ -926,6 +938,17 @@ operator|.
 name|RM_HA_ENABLED
 argument_list|,
 literal|true
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|YarnConfiguration
+operator|.
+name|RM_HA_IDS
+argument_list|,
+literal|"rm1,rm2"
 argument_list|)
 expr_stmt|;
 name|rmAdminCLIWithHAEnabled
@@ -1839,6 +1862,20 @@ operator|.
 name|class
 argument_list|)
 argument_list|)
+expr_stmt|;
+comment|// HAAdmin#isOtherTargetNodeActive should check state of non-target node.
+name|verify
+argument_list|(
+name|haadmin
+argument_list|,
+name|times
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+operator|.
+name|getServiceStatus
+argument_list|()
 expr_stmt|;
 block|}
 annotation|@
